using a black value inside the quotes

--- a/Challenge_9.liquid
+++ b/Challenge_9.liquid
@@ -90,8 +90,7 @@ Use the Cycle tag to either add nothing, or the class "feature-row--reverse", de
   
 <div class="shopify-section index-section">
     <div class="page-width">
-        <div class="feature-row {% cycle 'feature-row--reverse', 'feature-row' %}">
-            <div class="feature-row__item">
+        <div class="feature-row {% cycle 'feature-row--reverse', '' %}"> <!-- leave the quotes blank on second cycle does the same thing -->
                 <div class="feature-row__image-wrapper js">
                     <div style="padding-top:66.640625%;">
                         <img class="feature-row__image"
