deploy h2 -- which reads (You are a Liquid Pro!)

--- a/Challenge_10.liquid
+++ b/Challenge_10.liquid
@@ -18,7 +18,7 @@ Test your switch statement, by removing the comment tags around the assignments 
 
 {% assign element-type = "h6" %}
 {% assign element-type = "h4" %} 
-{%comment%} {% assign element-type = "h2" %} {%endcomment%}
+{% assign element-type = "h2" %} 
 
   {% case element-type %}
   {% when "h6" %}
